Changed portfolio theme

--- a/index.html
+++ b/index.html
@@ -6,137 +6,113 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords"
-          content="Sandeep, Sandeep Bhutiya, Sanedeep, Android Developer, Native Android Developer, Kotlin, Compose">
+        content="Sandeep, Sandeep Bhutiya, Sanedeep, Android Developer, Native Android Developer, Kotlin, Compose">
     <meta name="author" content="Sandeep Bhutiya">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
-    <link rel="stylesheet" href="theme/style.css"/>
+
+    <link rel="stylesheet" href="theme/style.css" />
 
     <title>Sandeep Bhutiya</title>
 </head>
 
 <body>
-<section class="center" id="home">
-    <div>
-        <img src="theme/logo.svg">
+    <div id="main">
+        <h1>
+            <\>
+        </h1>
         <h1>Sandeep Bhutiya</h1>
-        <h2>Android Dev</h2>
+        <small>Developer & Tech Adventurer</small>
+    </div>
 
+    <div id="about">
+        <h2>ッ About</h2>
 
         <p>
-            A passionate programmer with knowledge of <b>android development</b> using <b>kotlin</b> language.
-        </p>
-        <p>
-            Familiar with <b>modern android development</b> practices like <b>Compose, Material 3, MVVM Architecture, Coroutines, Koin DI, RoomDB, DataStore, Retrofit, Coil IL</b> etc.
-        </p>
-        <p>
-            Have experience of working with <b>Firebase, Google Cloud, Play Services, 3rd party APIs, Multilingual Apps</b> and end-to-end application <b>development lifecycle</b>, from conceptualizing to play store publishing.
-
+            A passionate programmer with knowledge of <b>android development</b> using <b>kotlin</b> and
+            <b>flutter</b>.
         </p>
         <p>
             Like to stay up to date with current tech and explore new software and various Linux stuff.
         </p>
-    </div>
-    <a href="#skills-and-education" class="btn next-skills"></a>
-</section>
 
-<section class="center" id="skills-and-education">
-    <div class="cards">
-        <ul class="edu">
-
-            <li>
-                <h2>Education</h2>
-                <h3>Masters</h3>
-                <ul>
-                    <li>in <b>2020</b></li>
-                    <li>with <b>First Class</b></li>
-                </ul>
-            </li>
-
-            <li>
-                <h3>Bachelors</h3>
-                <ul>
-                    <li>in <b>2017</b></li>
-                    <li>with <b>First Distinction</b></li>
-                </ul>
-            </li>
-
-            <li>
-                <h3>HSC</h3>
-                <ul>
-                    <li>in <b>2014</b></li>
-                    <li>with <b>Grade B1</b></li>
-                </ul>
-            </li>
-
-            <li>
-                <h3>SSC</h3>
-                <ul>
-                    <li>in <b>2012</b></li>
-                    <li>with <b>Grade B1</b></li>
-                </ul>
-            </li>
-        </ul>
-
-        <ul class="skills">
-            <li>
-                <h2>Skills</h2>
-                <h3>Android</h3>
-                <ul>
-                    <li>Kotlin</li>
-                    <li>Compose</li>
-                    <li>MVVM</li>
-                    <li>Firebase</li>
-                    <li>G Cloud</li>
-                    <li>Publishing</li>
-                </ul>
-            </li>
-            <li>
-                <h3>Other</h3>
-                <ul>
-                    <li>Python</li>
-                    <li>Flask</li>
-                    <li>Linux</li>
-                    <li>Git</li>
-                </ul>
-            </li>
-        </ul>
     </div>
 
-    <a href="#projects" class="btn next-projects"></a>
-</section>
+    <div id="education">
+        <h2>∡ Education</h2>
 
-<section class="center" id="projects">
-    <h2>Projects</h2>
-    <div class="cards">
-        <a href="https://play.google.com/store/apps/details?id=com.mdev.wallit" target="_blank">
-            <h3>WALLit</h3>
-            <p>Android</p>
-            <span>↗</span>
-        </a>
-
-        <a href="https://play.google.com/store/apps/details?id=com.mdev.jameenmitra" target="_blank">
-            <h3>Jamin Mitra</h3>
-            <p>Android</p>
-            <span>↗</span>
-        </a>
-
-        </a>
+        <p>
+            <b>Master of Computer Application</b> <br>
+            in <b>2020</b> <br>
+            with <b>First Class</b> <br>
+            at <b>Saurashtra University</b>
+        </p>
     </div>
-    <a href="#links" class="btn next-links"></a>
-</section>
 
-<section class="center" id="links">
-    <h2>Links</h2>
+    <div id="links">
+        <h2>＠ Links</h2>
 
-    <div>
         <a href="https://github.com/sanedeep" target="_blank">GitHub</a>
-        <a href="https://www.linkedin.com/in/sanedeep" target="_blank">LinkedIn</a>
+        <a href="https://www.linkedin.com/in/sanedeepa" target="_blank">LinkedIn</a>
         <a rel="me" href="https://mas.to/@sanedeep" target="_blank">Mastodon</a>
     </div>
 
-    <a href="#" class="btn to-top"></a>
-</section>
+    <div id="android">
+        <h2>♨ Android</h2>
+
+        <p>
+            <b>
+                Compose, Material 3, MVVM Architecture, Coroutines, Koin DI, RoomDB, DataStore, Retrofit, Coil IL,
+                Firebase, Google Cloud, Play Services, REST APIs, Multilingual Apps, Play Store Publishing.
+            </b>
+        </p>
+    </div>
+
+    <div id="flutter">
+        <h2>∱ Flutter</h2>
+
+        <p>
+            <b>
+                Material 3, Firebase, Google Cloud, Play Services, REST APIs, Multilingual Apps, Play
+                Store Publishing
+            </b>
+        </p>
+    </div>
+
+    <div id="other">
+        <h2>＊ Other</h2>
+
+        <p>
+            <b>Python, Flask, Java, HTML, CSS, JavaScript, Linux, Git, FOSS, STEM</b>
+        </p>
+    </div>
+
+    <div id="projects">
+        <h2>⌨ Projects</h2>
+
+        <a href="https://play.google.com/store/apps/details?id=com.mdev.wallit" target="_blank">WALLit</a>
+        <a href="https://play.google.com/store/apps/details?id=com.mdev.jameenmitra" target="_blank">Jamin Mitra</a>
+    </div>
+
+    <script src="theme/randomColor.min.js"></script>
+    <script>
+        function setColors() {
+            hues = ['red', 'orange', 'yellow', 'green', 'blue', 'purple', 'monochrome']
+            colors = randomColor({
+                luminosity: 'light',
+                hue: hues[Math.floor(Math.random() * hues.length)],
+                count: 8,
+            });
+
+            divs = ["main", "about", "education", "links", "android", "flutter", "other", "projects"];
+
+            for (let i = 0; i < colors.length; i++) {
+                document.getElementById(divs[i]).style.backgroundColor = colors[i];
+            }
+        }
+        setColors()
+        setInterval(setColors, 5000)
+    </script>
+
 </body>
 
 </html>
