--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <h2>＠ Links</h2>
 
         <a href="https://github.com/sanedeep" target="_blank">GitHub</a>
-        <a href="https://www.linkedin.com/in/sanedeepa" target="_blank">LinkedIn</a>
+        <a href="https://www.linkedin.com/in/sanedeep" target="_blank">LinkedIn</a>
         <a rel="me" href="https://mas.to/@sanedeep" target="_blank">Mastodon</a>
     </div>
 
