--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
     <script src="theme/randomColor.min.js"></script>
     <script>
-        imageUrl = "url('https://source.unsplash.com/random/768x768/?minimal+wallpaper')"; 
+        imageUrl = "url('https://source.unsplash.com/random/768x768/?minimal')"; 
         document.getElementById("bg").style.backgroundImage = imageUrl;
         
         function setColors() {
